# beat

./: README.md  meson.build
data/: meson.build  net.bloerg.Beat.appdata.xml.in  net.bloerg.Beat.gschema.xml
po/: POTFILES
src/: beat-window.c  beat-window.h  main.c  meson.build
src/resources/: beat.gresource.xml
src/resources/css/: beat.css
src/resources/ui/: beat-menu.ui  beat-window.ui
